# pricing-engine

./: .gitignore  CHANGE_PLAN_american_lsm.md  CHANGE_PLAN_docstrings_and_error_handling.md  CHANGE_PLAN_engine_design.md  README.md  change_plan_euler_log_scheme.md  change_plan_two_factor_euler.md  change_plan_v4.md  convert_data.py  examples.py  main-vol-surface.py  main.py  pyproject.toml  vol_surface_comparison.md
data/: underlying_data.xlsx
data/option_data/: data_options_old.xlsx  option_data_SPX.xlsx
data/yield_curves/: RateCurve_temp.xlsx
doc/: main.ipynb
kernel/: pricing_launcher.py  tools.py
kernel/market_data/: data_loader.py  market.py  underlying_asset.py
kernel/market_data/rate_curve_data/: rate_curve.py
kernel/market_data/volatility_surface/: abstract_volatility_surface.py  (+3 more)
kernel/products/: abstract_derivative.py
pricing_api/: apps.py  market_cache.py  urls.py  views.py
pricing_project/: asgi.py  settings.py  urls.py  wsgi.py
tests/: baseline_results.txt  test_american_engine.py  test_curve_consistency.py  test_day_counter.py  test_error_handling.py  test_financial_relationships.py  test_heston_integration.py  test_integration.py  test_interpolators.py  test_local_volatility.py  test_log_euler.py  test_matlab_sanity.py  test_mc_engine_greeks.py  test_models.py  test_pricing_results.py  test_rate_products.py  test_simulation_grids.py  test_simulation_result.py  test_structured_products.py  test_theta_crn.py  test_vectorized_payoffs.py  test_volatility_surfaces.py
utils/: day_counter.py  pricing_results.py  pricing_settings.py
(+29 files in other folders)
