[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "structured-products-engine-only"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "pytest>=9.1.0",
    "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["kernel", "utils"]

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
